HSEARCH-4744 Fix compilation error in tests with JDK 8